# quickstatements_rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.sh  restart.sh  run_single.sh
src/: command_type.rs  entity_id.rs  error.rs  lib.rs  property_value.rs  qs_bot.rs  qs_command.rs  qs_config.rs  qs_parser.rs  qs_server.rs  value.rs
test_data/: commands.qs  file_to_mediainfo.json  siteinfo_commons.json  siteinfo_enwiki.json  siteinfo_wikidata.json  title_to_item.json  user_blocked.json  user_not_blocked.json
