[package]
name = "quickstatements"
version = "0.1.0"
authors = ["Magnus Manske <magnusmanske@googlemail.com>"]
edition = "2018"

[dependencies]
#wikibase = "0.5.0"
#wikibase = { path = "../wikibase_rs" }
wikibase = { git="https://gitlab.com/tobias47n9e/wikibase_rs"}

mysql = { version="^17"}#,features = ["ssl"] }
serde_json = "1"
config = "0.9.2"
regex = "1"
lazy_static = "1"
chrono = "*"
clap = "2"
log = "0.4"
simple_logger = "*"
num_cpus = "*"