[package]
name = "quickstatements"
version = "0.1.0"
authors = ["Magnus Manske <magnusmanske@googlemail.com>"]
edition = "2018"

[dependencies]
#wikibase = "0.5.0"
#wikibase = { path = "../wikibase_rs" }
wikibase = { git="https://gitlab.com/tobias47n9e/wikibase_rs"}

mysql_async = "*"
serde_json = "1"
config = "*"
regex = "1"
lazy_static = "1"
chrono = "*"
clap = { version = "4" , features = ["derive","cargo"] }
log = "*"
simple_logger = "*"
num_cpus = "*"
tokio = { version = "^1", features = ["full","rt-multi-thread"] }
futures = "*"
async-recursion = "^1"

[profile.release]
lto = "fat"
codegen-units = 1
#target-cpu = "native"
panic = "abort"
