[package]
name = "quickstatements"
version = "0.1.0"
authors = ["Magnus Manske <magnusmanske@googlemail.com>"]
edition = "2021"

[dependencies]
#wikibase = "0.5.0"
#wikibase = { path = "../wikibase_rs" }
wikibase = { git = "https://gitlab.com/tobias47n9e/wikibase_rs" }

mysql_async = "0.36"
serde_json = "1"
config = "0.14"
regex = "1"
lazy_static = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive", "cargo"] }
log = "0.4"
simple_logger = "5"
num_cpus = "1"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
futures = "0.3"
async-recursion = "1"
anyhow = "1"
rand = "0.8"

[dev-dependencies]
wiremock = "0.6"

[profile.release]
lto = "fat"
codegen-units = 1
#target-cpu = "native"
panic = "abort"
